Fixed issue with WSIs not showing with new design. The reason for the bug is that if height is 100% of the canvas, it must have space to grow in the parent divs.

--- a/learnpathology/static/learnpathology/learnpathology.css
+++ b/learnpathology/static/learnpathology/learnpathology.css
@@ -205,9 +205,6 @@ body {
 }
 
 .myCard > .wsi_canvas{
-    max-width: 100%;
-    width: 100%;
-    height: calc(50em - 100px);
     align-content: center;
 }
 
@@ -283,4 +280,8 @@ body {
 .content-card card{
     all: inherit;
     width: 90%;
+}
+
+.fill {
+    height: 100%;
 }
